force-app/main/default/objects/Account_Note__c/Account_Note__c.object-meta.xml
<CustomObject>
    <description>Notes added to an Account</description>
    <label>Account Note</label>
    <nameField>
        <label>Account Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>