force-app/main/default/objects/Account_Note__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notes associated with an account</description>
    <inlineHelpText>Notes associated with an account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Notes</relationshipLabel>
    <relationshipName>Account_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>