force-app/main/default/objects/Account_Note__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Teammate Id who placed the note</description>
    <inlineHelpText>Teammate Id who placed the note</inlineHelpText>
    <label>Actor</label>
    <length>128</length>
    <type>Text</type>
</CustomField>