force-app/main/default/objects/Account_Note__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Notes Category - like Title</description>
    <inlineHelpText>Notes Category - like Title</inlineHelpText>
    <label>Category</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>