force-app/main/default/objects/Account_Note__c/fields/Note_Id__c.field-meta.xml
<CustomField>
    <fullName>Note_Id__c</fullName>
    <description>Note Id</description>
    <inlineHelpText>Note Id</inlineHelpText>
    <label>Note Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>