force-app/main/default/objects/Account_Note__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Actual Note Content</description>
    <inlineHelpText>Actual Note Content</inlineHelpText>
    <label>Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>