force-app/main/default/objects/Account_Note__c/fields/Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Created__c</fullName>
    <description>Time Created</description>
    <inlineHelpText>Time Created</inlineHelpText>
    <label>Time Created</label>
    <type>DateTime</type>
</CustomField>